Deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-py
  template:
    metadata:
      labels:
        app: app-py
    spec:
      containers:
      - name: app-py
        image: drgray/app:v1
        ports:
        - containerPort: 5000
