Deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: app-py
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30002
