Deployment/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "test-app.info"
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: app-service
            port:
              number: 80
